--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,9 @@
              xmlns:local="clr-namespace:TaskApplication"
              StartupUri="/Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button">
+            <Setter Property="Margin"
+                    Value="15" />
+        </Style>
     </Application.Resources>
 </Application>
