--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,11 +6,18 @@
         xmlns:local="clr-namespace:TaskApplication"
         mc:Ignorable="d"
         xmlns:vm="clr-namespace:TaskApplication.ViewModels"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow"
+        Height="450"
+        Width="800">
     <Window.DataContext>
         <vm:MainWindowVM />
     </Window.DataContext>
     
+    <Window.Resources>
+       
+    </Window.Resources>
+   
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -18,7 +25,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <DataGrid Grid.Row="0" ItemsSource="{Binding Tasks}" AutoGenerateColumns="False">
+        <DataGrid Grid.Row="0"
+                  ItemsSource="{Binding Tasks}"
+                  CanUserAddRows="False"
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Titel"
                                     Binding="{Binding title}" />
@@ -29,13 +39,17 @@
                 <DataGridTextColumn Header="Deadline"
                                     Binding="{Binding deadline}" />
                 <DataGridCheckBoxColumn Header="Gereed"
-                                    Binding="{Binding finished}" />
+                                        Binding="{Binding finished}" />
             </DataGrid.Columns>
         </DataGrid>
 
         <Button Grid.Row="1"
                 Content="Save Tasks"
                 Command="{Binding SaveTasksCommand}" />
+        <Button Grid.Row="2"
+                Content="Add Task"
+                Command="{Binding OpenAddTaskWindowCommand}"
+                />
 
     </Grid>
 </Window>
